fixed email places, borders on mobile

--- a/_sass/moonwalk.scss
+++ b/_sass/moonwalk.scss
@@ -23,7 +23,11 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
-html { height: 100%; }
+html {
+  height: 100%;
+  border: 0.5rem solid #74c0fc;
+  background-color: #74c0fc;
+}
 
 body {
   font-family:  "Inter", -apple-system, "avenir next", avenir, roboto, noto, ubuntu, "helvetica neue", helvetica, sans-serif;
@@ -31,6 +35,8 @@ body {
   line-height: 2;
   margin: 0;
   min-height: 100%;
+  border: none;
+  border-radius: 2rem;
 }
 pre, code {
   font-family: "Roboto Mono", "Courier New", monospace;
@@ -215,7 +221,7 @@ html[data-theme="dark"] { @include dark-appearance; }
 
 // -------------------------------------------- //
 
-html, body {
+body {
     background-color: var(--bg);
     color: var(--text);
 }
@@ -229,6 +235,8 @@ html, body {
   }
   html, body {
     background-color: #00000000;
+    border: none;
+    border-radius: 0rem;
   }
   .w {
     background: var(--bg-secondary-opaque);
@@ -414,4 +422,9 @@ ul {
   font-size: 4em;
   line-height: 1;
   letter-spacing: -1px;
+}
+
+.page-content {
+  background-color: var(--bg);
+  color: var(--bg);
 }
